--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
+html {
+    background-color: rgb(250, 250, 250);
+}
+
 .app-container {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 1rem;
+    font-family: Roboto;
 }
-
 
 table {
     border-collapse: collapse;
+    box-shadow: 3px 3px 3px rgb(95, 95, 95);
     width: 100%;
 }
 
-th, td {
+input :hover {
+    border: none;
+    box-shadow: 1px 1px 1px rgb(58, 58, 58);
+    width: 200px;
+    height: 25px;
+    border-radius: 3px;
+    font-size: 12px;
+}
+
+th,
+td {
     border: 1px solid #ffffff;
     text-align: left;
     padding: 8px;
-    font-size: 32px;
+    font-size: 15px;
 }
 
 th {
-    background-color: rgba(117, 201, 250);
+    background-color: rgb(57, 181, 238);
+    color: rgb(0, 0, 0);
+    font-size: 20px;
 }
 
 td {
-    background-color: rgb(193, 230, 250);
+    background-color: rgb(189, 238, 253);
 }
